welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:2: error: not found: value int
  int l = 0
  ^arrayFront9:4: error: not found: value l
  for (i<-0 to l){
               ^