welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
  int l = 0
  
  for (i<-0 to l){
    if (nums(i)==9){
      return true
    }
  }
  return false  
  }
